update the service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
   <div class="main_container">
     
       <app-home       id="home"      appScrollSpy="Home"      spyId="home"></app-home>
-      <!-- <app-about      id="about"     appScrollSpy="About Me"  spyId="about"></app-about> -->
-      <!-- <app-services   id="services"  appScrollSpy="Service"   spyId="services"></app-services> -->
+      <app-about      id="about"     appScrollSpy="About Me"  spyId="about"></app-about>
+      <app-services   id="services"  appScrollSpy="Service"   spyId="services"></app-services>
       <app-resume     id="resume"    appScrollSpy="Resume"    spyId="resume"></app-resume>
       <app-skills     id="skill"     appScrollSpy="Skill"     spyId="skill"></app-skills>
       <app-portfolio  id="portfolio" appScrollSpy="Portfolio" spyId="portfolio"></app-portfolio>
