--- a/src/app/pages/skills/skills.component.scss
+++ b/src/app/pages/skills/skills.component.scss
@@ -218,18 +218,23 @@
       }
       .hex:nth-child(-n+3) {
         position: relative;
-        // left: -55px;
+        left: 50px;
       }
       .hex:nth-child(n+4):nth-child(-n+6) {
         position: relative;
-        left: -150px;
+        left: -40px;
         top: -35px;
          p {
-         
            top: -20px;
-      
-          
-        }
+       }
+      }
+      .hex:nth-child(n+7):nth-child(-n+9) {
+        position: relative;
+        left: 50px;
+        top: -55px;
+         p {
+           top: -20px;
+       }
       }
     }
     .design-skills {
@@ -248,11 +253,41 @@
   }
 
   @media (min-width: 768px) and (max-width: 991.98px) {
+    .grid-container {
+      grid-template-columns: repeat(4, 175px);
+      gap: 10px;
+       padding: 10px 0 10px 15px;
+       justify-content: center;
+      .hex {
+        width: 100px;
+        height: 120px;
+      }
+      .hex:nth-child(-n+4) {
+        position: relative;
+        left: 50px;
+      }
+      .hex:nth-child(n+5):nth-child(-n+8) {
+        position: relative;
+        left: -40px;
+        top: -35px;
+         p {
+          //  top: -20px;
+       }
+      }
+      // .hex:nth-child(n+7):nth-child(-n+9) {
+      //   position: relative;
+      //   left: 50px;
+      //   top: -55px;
+      //    p {
+      //      top: -20px;
+      //  }
+      // }
+    }
     
     .design-skills {
       .design-skill-tags {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr ;
         gap: 30px;
       }
     }
