--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -32,7 +32,7 @@
     width: 250px;
     height: 150px;
     border-radius: 24px;
-    background: linear-gradient(135deg, #ffb75e 0%, #ed8f03 100%), url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80');
+    background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80');
     background-size: cover;
     background-blend-mode: multiply;
     top: -60px;
@@ -40,6 +40,18 @@
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
+  
+    box-shadow: 
+    0 8px 16px rgba(0, 0, 0, 0.12),
+    0 2px 6px rgba(0, 0, 0, 0.08);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.portfolio-card__image:hover {
+  // transform: translateY(-4px);
+  box-shadow: 
+    0 8px 16px rgba(0, 0, 0, 0.12),
+    0 2px 6px rgba(0, 0, 0, 0.08);
 }
 
 .portfolio-card__content {
@@ -73,7 +85,7 @@
 }
 
 .portfolio-card__btn {
-    background: linear-gradient(90deg, #ffb75e 0%, #ed8f03 100%);
+    background: linear-gradient(90deg, var(--primary-color2) 0%, var(--secondary-color2) 100%);
     color: #fff;
     border: none;
     border-radius: 30px;
@@ -91,37 +103,37 @@
 
     .portfolio-card:nth-child(3) {
   .portfolio-card__image {
-    background: linear-gradient(135deg, #ffb75e 0%, #034ced 100%), url('../../../assets/imagess/happylocate.png');
+    background:  url('../../../assets/imagess/happylocate.png');
       background-size: cover;
   }
     }
     .portfolio-card:nth-child(6) {
   .portfolio-card__image {
-    background: linear-gradient(135deg, #ffb75e 0%, #034ced 100%), url('../../../assets/imagess/superconstruct.png');
+    background:  url('../../../assets/imagess/superconstruct.png');
       background-size: cover;
   }
     }
     .portfolio-card:nth-child(4) {
   .portfolio-card__image {
-    background: linear-gradient(135deg, #ffb75e 0%, #034ced 100%), url('../../../assets/imagess/faradtech.png');
+    background:  url('../../../assets/imagess/faradtech.png');
       background-size: cover;
   }
     }
     .portfolio-card:nth-child(6) {
   .portfolio-card__image {
-    background: linear-gradient(135deg, #ffb75e 0%, #034ced 100%), url('../../../assets/imagess/uts.png');
+    background:  url('../../../assets/imagess/uts.png');
       background-size: cover;
   }
     }
     .portfolio-card:nth-child(1) {
   .portfolio-card__image {
-    background: linear-gradient(135deg, #ffb75e 0%, #034ced 100%), url('../../../assets/imagess/pronnel.png');
+    background:  url('../../../assets/imagess/pronnel.png');
       background-size: cover;
   }
     }
     .portfolio-card:nth-child(2) {
   .portfolio-card__image {
-    background: linear-gradient(135deg, #ffb75e 0%, #034ced 100%), url('../../../assets/imagess/grene.png');
+    background:  url('../../../assets/imagess/grene.png');
       background-size: cover;
   }
     }
@@ -131,7 +143,7 @@
 
     @media (max-width: 575.98px) {
       .portfolio-row {
-            grid-template-columns: 1fr ; 
+            grid-template-columns: 350px ; 
             gap: 30px; 
         }
          .portfolio-card {
@@ -141,7 +153,7 @@
 
     @media (min-width: 576px) and (max-width: 767.98px) {
     .portfolio-row {
-            grid-template-columns: 1fr ; 
+            grid-template-columns: 350px ; 
             gap: 30px; 
         }
          .portfolio-card {
@@ -151,7 +163,7 @@
 
     @media (min-width: 768px) and (max-width: 991.98px) {
      .portfolio-row {
-            grid-template-columns: 1fr 1fr; 
+            grid-template-columns: 350px 350px; 
             gap: 30px; 
         }
 
