update all code

--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,9 +1,9 @@
 <div class="page_container">
-    <section class="skills-section page_content" >
-    
+    <section class="skills-section page_content">
+
         <h2>My Skills</h2>
-        <h3>Coding Skills.</h3>
-        <div class="grid-container">
+        
+        <!-- <div class="grid-container">
             <div class="hex">
                 <div class="hex_content">
                     <img src="../../../assets/imagess/angular_icon_gradient.gif" alt="HTML5">
@@ -62,20 +62,115 @@
                     <p>98%</p>
                 </div>
             </div>
+        </div> -->
+
+        <div class="design-skills">
+            <h3>Coding Skills.</h3>
+            <div class="design-skill-tags">
+                <div class="tag figma">
+                    <div class="icon">
+                        <i class="fab fa-html5"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <!-- <div class="progress-bar-container" style="width: 100px; background: #eee; border-radius: 6px; overflow: hidden; margin-bottom: 6px;">
+                            <div class="progress-bar" style="width: 94%; height: 10px; background: #4caf50;"></div>
+                        </div> -->
+                        <h4>94%</h4>
+                        <h4>Angular</h4>
+                    </div>
+                </div>
+
+                <div class="tag photoshop">
+                    <div class="icon">
+                        <i class="fa fa-image"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>98%</h4>
+                        <h4>Node</h4>
+                    </div>
+                </div>
+                <div class="tag xd">
+                    <div class="icon">
+                        <i class="fab fa-figma"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>88%</h4>
+                        <h4>MongoDB</h4>
+                    </div>
+                </div>
+                <div class="tag sketch">
+                    <div class="icon">
+                        <i class="fab fa-sketch"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>85%</h4>
+                        <h4>Python</h4>
+                    </div>
+                </div>
+                <div class="tag invision">
+                    <div class="icon">
+                        <i class="fab fa-invision"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>89%</h4>
+                        <h4>React</h4>
+                    </div>
+                </div>
+            </div>
         </div>
-    
-    
+
         <div class="design-skills">
             <h3>Design Skills.</h3>
             <div class="design-skill-tags">
-              <div class="tag figma"><span>94%</span> HTML, CSS</div>
-              <div class="tag photoshop"><span>98%</span> PHOTOSHOP</div>
-              <div class="tag xd"><span>88%</span> ADOBE XD</div>
-              <div class="tag sketch"><span>85%</span> SKETCH</div>
-              <div class="tag invision"><span>89%</span> INVISION</div>
+                <div class="tag figma">
+                    <div class="icon">
+                        <i class="fab fa-html5"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>94%</h4>
+                        <h4>HTML,CSS</h4>
+                    </div>
+                </div>
+
+                <div class="tag photoshop">
+                    <div class="icon">
+                        <i class="fa fa-image"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>98%</h4>
+                        <h4>PHOTOSHOP</h4>
+                    </div>
+                </div>
+                <div class="tag xd">
+                    <div class="icon">
+                        <i class="fab fa-figma"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>88%</h4>
+                        <h4>FIGMA</h4>
+                    </div>
+                </div>
+                <div class="tag sketch">
+                    <div class="icon">
+                        <i class="fab fa-sketch"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>85%</h4>
+                        <h4>SKETCH</h4>
+                    </div>
+                </div>
+                <div class="tag invision">
+                    <div class="icon">
+                        <i class="fab fa-invision"></i>
+                    </div>
+                    <div class="skill_detail">
+                        <h4>89%</h4>
+                        <h4>INVISION</h4>
+                    </div>
+                </div>
             </div>
-          </div>
-          
+        </div>
+
     </section>
 
 </div>
