updated the all design

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -100,3 +100,59 @@
 
 
 
+
+
+
+
+
+@media (max-width: 374.98px) {
+
+    
+}
+
+@media (min-width: 375px) and (max-width: 424.98px) {
+    
+}
+
+@media (min-width: 425px) and (max-width: 479.98px) {
+        
+}
+
+@media (min-width: 480px) and (max-width: 524.98px) {
+    
+}
+
+@media (min-width: 525px) and (max-width: 575.98px) {
+    
+}
+
+@media (min-width: 576px) and (max-width: 649.98px) {
+    
+}
+
+@media (min-width: 650px) and (max-width: 767.98px) {
+    
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+     
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    
+}
+
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+}
+
+@media (min-width: 1400px) and (max-width: 1599.98px) {
+}
+@media (min-width: 1600px) and (max-width: 1919.98px) {
+}
+
+@media (min-width: 1920px) {
+}
+
+
+
+
