--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,8 +2,13 @@
     <div class="home-content">
         <p>WELCOME TO MY WORLD</p>
         <div class="heading-content">
-            <h1>Hi, I'm <span class="text_gradeint">Mohit Pal</span> <br> <span class="type_text">a <label
-                        [ngClass]="className"> {{bannerTxt}}. </label></span>
+            <h1>Hi, I'm 
+                <span class="text_gradeint">Mohit Pal </span> 
+                a <br>
+                 <span class="type_text">
+                    
+                    <label [ngClass]="className"> {{bannerTxt}}. </label>
+                </span>
             </h1>
             <p class="para-content">
                 I began my journey as a web developer with a strong curiosity for how websites work under the hood. Over
