--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -66,15 +66,15 @@
 
         <div class="design-skills">
             <h3>Coding Skills.</h3>
-            <div class="design-skill-tags">
+            <div class="design-skill-tagss">
                 <div class="tag figma">
                     <div class="icon">
                         <i class="fab fa-html5"></i>
                     </div>
                     <div class="skill_detail">
-                        <!-- <div class="progress-bar-container" style="width: 100px; background: #eee; border-radius: 6px; overflow: hidden; margin-bottom: 6px;">
+                        <div class="progress-bar-container" style="width: 100%; background: #eee; border-radius: 6px; overflow: hidden; margin-bottom: 6px;">
                             <div class="progress-bar" style="width: 94%; height: 10px; background: #4caf50;"></div>
-                        </div> -->
+                        </div>
                         <h4>94%</h4>
                         <h4>Angular</h4>
                     </div>
