--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -4,7 +4,7 @@
      <section class="about-section">
    
           <div class="stats">
-              <div class="hexagon light">
+              <div class="hexagon light ">
                   <div class="hex_content">
                       <h2>4K</h2>
                       <p>CASE SUCCESS</p>
@@ -17,7 +17,7 @@
                       <p>HAPPY CLIENT</p>
                   </div>
               </div>
-              <div class="hexagon light">
+              <div class="hexagon light hexcenter">
                   <div class="hex_content">
                       <h2>1K</h2>
                       <p>WINNING AWARD</p>
