--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -305,5 +305,407 @@
     @media (min-width: 992px) and (max-width: 1199.98px) {
     
     }
+
+
+
+
+
+
+
+
+
+
+    @media (max-width: 374.98px) {
+    .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 0px;
+        margin-bottom: 20px;
+        justify-self: center;
+        .hexagon {
+          width: 115px;
+          height: 115px;
+          padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+            .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+            position: unset;
+            top: 0;
+            left: 0;
+            }
+            .hexcenter{
+                grid-column: span 2;
+                justify-self: center;
+                position: relative!important;
+                top: -20px!important;
+            }
+       
+        
+      }
+      .about-content {
+        padding-left: 0;
+        .description{
+            font-size: 15px;
+        }
+        .profile-details{
+            .details-list{
+                padding: 0;
+                font-size: 13px;
+                li{
+                    grid-template-columns: 70px 1fr;
+                    padding: 10px 0;
+                }
+            }
+        }
+      }
+     }
+
+    
+}
+
+@media (min-width: 375px) and (max-width: 424.98px) {
+    .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 0px;
+        margin-bottom: 20px;
+        justify-self: center;
+        .hexagon {
+          width: 115px;
+          height: 115px;
+          padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+            .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+            position: unset;
+            top: 0;
+            left: 0;
+            }
+            .hexcenter{
+                grid-column: span 2;
+                justify-self: center;
+                position: relative!important;
+                top: -20px!important;
+            }
+       
+        
+      }
+      .about-content {
+        padding-left: 0;
+        .description{
+            font-size: 15px;
+        }
+        .profile-details{
+            .details-list{
+                padding: 0;
+                font-size: 14px;
+                li{
+                    grid-template-columns: 70px 1fr;
+                    padding: 10px 0;
+                }
+            }
+        }
+      }
+     }
+    
+}
+
+@media (min-width: 425px) and (max-width: 479.98px) {
+    .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 0px;
+        margin-bottom: 20px;
+        justify-self: center;
+        .hexagon {
+          width: 125px;
+          height: 125px;
+          padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+            .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+            position: unset;
+            top: 0;
+            left: 0;
+            }
+            .hexcenter{
+                grid-column: span 2;
+                justify-self: center;
+                position: relative!important;
+                top: -20px!important;
+            }
+       
+        
+      }
+      .about-content {
+        padding-left: 0;
+        .description{
+            font-size: 16px;
+        }
+        .profile-details{
+            .details-list{
+                padding: 0;
+                font-size: 16px;
+                li{
+                    grid-template-columns: 85px 1fr;
+                    padding: 10px 0;
+                }
+            }
+        }
+      }
+     }
+        
+}
+
+@media (min-width: 480px) and (max-width: 524.98px) {
+    .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 0px;
+        margin-bottom: 20px;
+        justify-self: center;
+        .hexagon {
+          width: 125px;
+          height: 125px;
+          padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+            .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+            position: unset;
+            top: 0;
+            left: 0;
+            }
+            .hexcenter{
+                grid-column: span 2;
+                justify-self: center;
+                position: relative!important;
+                top: -20px!important;
+            }
+       
+        
+      }
+      .about-content {
+        padding-left: 0;
+        .description{
+            font-size: 18px;
+        }
+        .profile-details{
+            .details-list{
+                padding: 0;
+                font-size: 18px;
+                li{
+                    grid-template-columns: 95px 1fr;
+                    padding: 10px 0;
+                }
+            }
+        }
+      }
+     }
+    
+}
+
+@media (min-width: 525px) and (max-width: 575.98px) {
+    .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 0px;
+        margin-bottom: 20px;
+        justify-self: center;
+        .hexagon {
+          width: 125px;
+          height: 125px;
+          padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+            .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+            position: unset;
+            top: 0;
+            left: 0;
+            }
+            .hexcenter{
+                grid-column: span 2;
+  justify-self: center;
+                position: relative!important;
+                top: -20px!important;
+            }
+        //  .hexagon:nth-child(1)  {
+        //   position: relative;
+        // //   top: 0;
+        //   left: 50%;
+        //  }
+        //  .hexagon:nth-child(3)  {
+        //   position: relative;
+        //   top: 0;
+        //   left: 50%;
+        //  }
+        //  .hexagon:nth-child(2) {
+        //   position: relative;
+        //   top: 0;
+        //   left: 0;
+        //  }
+        
+      }
+      .about-content {
+        padding-left: 0;
+        .profile-details{
+            .details-list{
+                padding: 0;
+            }
+        }
+      }
+     }
+    
+}
+
+@media (min-width: 576px) and (max-width: 649.98px) {
+    .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        margin-bottom: 20px;
+        .hexagon {
+          width: 125px;
+          height: 125px;
+          padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+         .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+          position: unset;
+          top: 0;
+          left: 0;
+         }
+        
+      }
+      .about-content {
+        padding-left: 0;
+      }
+     }
+    
+}
+
+@media (min-width: 650px) and (max-width: 767.98px) {
+    .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        margin-bottom: 20px;
+        // padding: 0 30px;
+        .hexagon {
+            width: 150px;
+            height: 150px;
+        //   padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+         .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+          position: unset;
+          top: 0;
+          left: 0;
+         }
+        
+      }
+      .about-content {
+        padding-left: 0;
+      }
+     }
+    
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .about-section {
+      grid-template-columns: 1fr;
+      .stats {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        margin-bottom: 20px;
+        // padding: 0 30px;
+        .hexagon {
+            width: 175px;
+            height: 175px;
+          padding: 10px;
+          h2 {
+            font-size: 24px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+         .hexagon:nth-child(2) , .hexagon:nth-child(3) {
+          position: unset;
+          top: 0;
+          left: 0;
+         }
+        
+      }
+      .about-content {
+        padding-left: 0;
+      }
+     }
+     
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    
+}
+
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+}
+
+@media (min-width: 1400px) and (max-width: 1599.98px) {
+}
+@media (min-width: 1600px) and (max-width: 1919.98px) {
+}
+
+@media (min-width: 1920px) {
+}
   
   
