--- a/src/app/pages/services/services.component.scss
+++ b/src/app/pages/services/services.component.scss
@@ -156,3 +156,155 @@ h2{
         }
     }
 }
+
+
+@media (max-width: 374.98px) {
+.pricing-container {
+        grid-template-columns: minmax(250px, 250px);
+        margin: 0 auto;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+    
+}
+
+@media (min-width: 375px) and (max-width: 424.98px) {
+    .pricing-container {
+        grid-template-columns: minmax(280px, 400px);
+        margin: 0 auto;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 425px) and (max-width: 479.98px) {
+        .pricing-container {
+        grid-template-columns: minmax(300px, 400px);
+        margin: 0 auto;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 480px) and (max-width: 524.98px) {
+    .pricing-container {
+        grid-template-columns: minmax(300px, 400px);
+        margin: 0 auto;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 525px) and (max-width: 575.98px) {
+    .pricing-container {
+        grid-template-columns: minmax(300px, 400px);
+        margin: 0 auto;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 576px) and (max-width: 649.98px) {
+    .pricing-container {
+        grid-template-columns: minmax(300px, 400px);
+        margin: 0 auto;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+    
+}
+
+@media (min-width: 650px) and (max-width: 767.98px) {
+    .pricing-container {
+        grid-template-columns: minmax(300px, 400px);
+        margin: 0 auto;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+    
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .pricing-container {
+        grid-template-columns: minmax(300px, 400px) minmax(300px, 400px );
+        margin: 0 auto;
+        // padding: 50px;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+     
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .pricing-container {
+        grid-template-columns: minmax(300px, 400px) minmax(300px, 400px ) ;
+        padding: 50px;
+        .pricing-card {
+            .card-header{
+                &::after {
+                    bottom: -110px;
+                    height: 110px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+}
+
+@media (min-width: 1400px) and (max-width: 1599.98px) {
+}
+@media (min-width: 1600px) and (max-width: 1919.98px) {
+}
+
+@media (min-width: 1920px) {
+}
